a few small fixes/improvements to the F12 auto-transfer matching.

--- a/Source/WPF/MyMoney/Dialogs/CsvImportDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/CsvImportDialog.xaml
@@ -25,10 +25,9 @@
       </Style.Triggers>
     </Style>
     <Style x:Key="AlternationItemStyle" TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource MoneyDefaultListViewItem}">
-      <Setter Property="Background" 
-                            Value="{Binding RelativeSource={RelativeSource Self},
-                                            Path=(ItemsControl.AlternationIndex), 
-                                            Converter={StaticResource GridBackgroundAlternationConverter}}"/>
+      <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource Self},
+              Path=(ItemsControl.AlternationIndex), 
+              Converter={StaticResource GridBackgroundAlternationConverter}}"/>
     </Style>
   </Window.Resources>
   <DockPanel Margin="20">
