--- a/Source/WPF/MyMoney/Controls/AppSettings.xaml
+++ b/Source/WPF/MyMoney/Controls/AppSettings.xaml
@@ -7,49 +7,64 @@
              xmlns:ui="http://schemas.modernwpf.com/2019"
              mc:Ignorable="d" 
              Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="600" d:DesignWidth="300">
+  <UserControl.Resources>
+    <Style TargetType="Label" BasedOn="{StaticResource DefaultLabelStyle}">
+      <Setter Property="Margin" Value="20,10"/>
+    </Style>
+    <Style TargetType="CheckBox"  BasedOn="{StaticResource DefaultCheckBoxStyle}">
+      <Setter Property="Margin" Value="20,10"/>
+    </Style>
+    <Style TargetType="ComboBox"  BasedOn="{StaticResource DefaultComboBoxStyle}">
+      <Setter Property="Margin" Value="5"/>
+      <Setter Property="HorizontalAlignment" Value="Stretch"/>
+    </Style>
+  </UserControl.Resources>
 
-    <Border BorderThickness="1" BorderBrush="{DynamicResource MessageBoxBorder}">
-        <StackPanel>
+  <Border BorderThickness="1" BorderBrush="{DynamicResource MessageBoxBorder}">
+    <Grid>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+      </Grid.RowDefinitions>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="*"/>
+      </Grid.ColumnDefinitions>
 
-            <!-- back button header -->
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+      <!-- back button header -->
+      <Grid Grid.Row="0" Grid.ColumnSpan="3" Margin="0,0,0,10">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="Auto"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-                <Button x:Name="BackButton" IsEnabled="True" Style="{DynamicResource NavigationBackButtonNormalStyle}"  Click="OnCloseClicked"   VerticalAlignment="Center" HorizontalAlignment="Left"  Margin="4,4,0,0"></Button>
-                <TextBlock FontSize="18" Grid.Column="1" VerticalAlignment="Center" FontWeight="DemiBold">Settings</TextBlock>
-            </Grid>
+        <Button x:Name="BackButton" IsEnabled="True" Style="{DynamicResource NavigationBackButtonNormalStyle}"  Click="OnCloseClicked"   VerticalAlignment="Center" HorizontalAlignment="Left"  Margin="4,4,0,0"></Button>
+        <TextBlock FontSize="18" Grid.Column="1" VerticalAlignment="Center" FontWeight="DemiBold" >Settings</TextBlock>
+      </Grid>
 
+      <Label Grid.Row="1" Grid.Column="0">Database Password:</Label>
+      <c:PasswordControl Grid.Row="1" Grid.Column="1" x:Name="editPasswordBox" PasswordChanged="OnPasswordChanged" Margin="5"/>
 
-            <ui:SimpleStackPanel Spacing="20" Margin="10">
-                <!-- Password -->
-                <StackPanel>
-                    <TextBlock >Database Password:</TextBlock>
-                    <c:PasswordControl x:Name="editPasswordBox" PasswordChanged="OnPasswordChanged"/>
-                </StackPanel>
+      <Label Grid.Row="2" Grid.Column="0"  VerticalAlignment="Center">Theme (Ctrl-L)</Label>
+      <ComboBox Grid.Row="2" Grid.Column="1"  x:Name="comboBoxTheme"  SelectionChanged="OnThemeChanged" Margin="5" />
 
-                <StackPanel Orientation="Horizontal">
-                    <StackPanel>
-                        <TextBlock Width="120px">Theme:</TextBlock>
-                        <TextBlock Margin="10 0 0 0" FontSize="10">Ctrl-L</TextBlock>
-                    </StackPanel>
-                    <ComboBox x:Name="comboBoxTheme"  SelectionChanged="OnThemeChanged" />
-                </StackPanel>
+      <Label Grid.Row="3" Grid.Column="0"  VerticalAlignment="Center">Fiscal Year Start:</Label>
+      <ComboBox Grid.Row="3" Grid.Column="1" x:Name="comboBoxFiscalYear"  SelectionChanged="OnFiscalYearChanged"/>
 
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Width="120px">Fiscal Year Start:</TextBlock>
-                    <ComboBox x:Name="comboBoxFiscalYear"  SelectionChanged="OnFiscalYearChanged" />
-                </StackPanel>
+      <Label Grid.Row="4" Grid.Column="0"  VerticalAlignment="Center">Transfer search (days):</Label>
+      <TextBox Grid.Row="4" Grid.Column="1" x:Name="textBoxTransferSearchDays"  SelectionChanged="OnTransferDaysChanged" Margin="5"
+                ToolTip="Default days to use when searching for matching transfers with F12"/>
 
-                <CheckBox x:Name="checkBoxRentalSupport" Checked="OnRentalSupportChanged" Unchecked="OnRentalSupportChanged">Rental management</CheckBox>
+      <CheckBox Grid.Row="5" Grid.ColumnSpan="3" x:Name="checkBoxRentalSupport" Checked="OnRentalSupportChanged" Unchecked="OnRentalSupportChanged">Rental management</CheckBox>
 
-                <CheckBox x:Name="checkBoxPlaySounds"  Checked="OnPlaySoundsChanged" Unchecked="OnPlaySoundsChanged">Play sounds</CheckBox>
+      <CheckBox Grid.Row="6" Grid.ColumnSpan="3" x:Name="checkBoxPlaySounds"  Checked="OnPlaySoundsChanged" Unchecked="OnPlaySoundsChanged">Play sounds</CheckBox>
 
-            </ui:SimpleStackPanel>
-
-        </StackPanel>
-    </Border>
+    </Grid>
+  </Border>
 </UserControl>
