templatize the information buttons and add tooltips to the buttons.

--- a/Source/WPF/MyMoney/Themes/generic.xaml
+++ b/Source/WPF/MyMoney/Themes/generic.xaml
@@ -918,5 +918,42 @@
       </Setter.Value>
     </Setter>
   </Style>
+  
+
+  <Style x:Key="InformationButtonStyle" TargetType="{x:Type Button}">
+    <Setter Property="Background" Value="Transparent" />
+    <Setter Property="Padding" Value="0,0,0,1" />
+    <Setter Property="Template" >
+      <Setter.Value>
+        <ControlTemplate TargetType="Button">
+          <Grid>
+            <Border x:Name="BackgroundBorder" Background="#00A6ED" 
+                    CornerRadius="3">
+            </Border>
+            <Label FontSize="18" Foreground="White"
+                   HorizontalAlignment="Center" VerticalAlignment="Center">ℹ️</Label>
+          </Grid>
+          <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver">
+              <Setter Property="Background" TargetName="BackgroundBorder"
+                      Value="{DynamicResource ButtonBackgroundPointerOver}">
+              </Setter>
+              <Trigger.Value>
+                <s:Boolean>True</s:Boolean>
+              </Trigger.Value>
+            </Trigger>
+            <Trigger Property="IsPressed">
+              <Setter Property="Background" TargetName="BackgroundBorder"
+                      Value="{DynamicResource ButtonBackgroundPressed}">
+              </Setter>
+              <Trigger.Value>
+                <s:Boolean>True</s:Boolean>
+              </Trigger.Value>
+            </Trigger>
+          </ControlTemplate.Triggers>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+  </Style>
 
 </ResourceDictionary>
