--- a/Source/WPF/MyMoney/Dialogs/BuildingDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/BuildingDialog.xaml
@@ -26,7 +26,7 @@
 
         <Grid Name="Fields" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="8" />
                 <ColumnDefinition Width="2"/>
                 <ColumnDefinition Width="2*" />
@@ -80,6 +80,7 @@
                 <!-- Units -->
                 <TabItem Header="Units" >
                     <DataGrid x:Name="Units" Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="4" ItemsSource="{Binding}"  
+                      Style="{StaticResource DefaultDataGridStyle}" 
                       MinHeight="100" AutoGenerateColumns="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Number" Binding="{Binding Name}" />
@@ -112,7 +113,7 @@
                                   DisplayMemberPath="Name"  
                                   SelectedValuePath="Id" 
                                   SelectedValue="{Binding CategoryForIncome}"
-                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}"/>
+                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}" HorizontalAlignment="Stretch"/>
 
                         <TextBlock Text="Taxes :" Grid.Row="1" TextAlignment="Right" VerticalAlignment="Center"/>
                         <ComboBox Grid.Row="1" Grid.Column="2"
@@ -120,7 +121,7 @@
                                   DisplayMemberPath="Name"  
                                   SelectedValuePath="Id" 
                                   SelectedValue="{Binding CategoryForTaxes}"
-                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}"/>
+                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}" HorizontalAlignment="Stretch"/>
 
                         <TextBlock Text="Interest :" Grid.Row="2" TextAlignment="Right" VerticalAlignment="Center"/>
                         <ComboBox Grid.Row="2" Grid.Column="2"
@@ -128,7 +129,7 @@
                                   DisplayMemberPath="Name"  
                                   SelectedValuePath="Id" 
                                   SelectedValue="{Binding CategoryForInterest}"
-                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}"/>
+                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}" HorizontalAlignment="Stretch"/>
 
                         <TextBlock Text="Repairs :"  Grid.Row="3" TextAlignment="Right" VerticalAlignment="Center"/>
                         <ComboBox Grid.Row="3" Grid.Column="2"
@@ -136,7 +137,7 @@
                                   DisplayMemberPath="Name"  
                                   SelectedValuePath="Id" 
                                   SelectedValue="{Binding CategoryForRepairs}"
-                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}"/>
+                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}" HorizontalAlignment="Stretch"/>
 
                         <TextBlock Text="Maintenance :" Grid.Row="4" TextAlignment="Right" VerticalAlignment="Center"/>
                         <ComboBox Grid.Row="4" Grid.Column="2"
@@ -144,7 +145,7 @@
                                   DisplayMemberPath="Name"  
                                   SelectedValuePath="Id" 
                                   SelectedValue="{Binding CategoryForMaintenance}"
-                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}"/>
+                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}" HorizontalAlignment="Stretch"/>
 
                         <TextBlock Text="Management :" Grid.Row="5" TextAlignment="Right" VerticalAlignment="Center"/>
                         <ComboBox Grid.Row="5" Grid.Column="2"
@@ -152,7 +153,7 @@
                                   DisplayMemberPath="Name"  
                                   SelectedValuePath="Id" 
                                   SelectedValue="{Binding CategoryForManagement}"
-                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}"/>
+                                  ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type dialog:BuildingDialog}}, Path=Categories}" HorizontalAlignment="Stretch"/>
 
                     </Grid>
                 </TabItem>
