--- a/Source/WPF/MyMoney/Dialogs/OnlineAccountDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/OnlineAccountDialog.xaml
@@ -6,9 +6,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:local="clr-namespace:Walkabout.Dialogs"
         xmlns:help="clr-namespace:Walkabout.Help"
-        mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        mc:Ignorable="d" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         help:HelpService.HelpKeyword="Online Banking"
-        xmlns:c="clr-namespace:Walkabout.WpfConverters"
+        xmlns:c="clr-namespace:Walkabout.WpfConverters" 
+        xmlns:ui="http://schemas.modernwpf.com/2019"
         Title="Online Account"  
         WindowStartupLocation="CenterOwner" 
         WindowStyle="ToolWindow"
@@ -44,17 +46,17 @@
 
         <DataTemplate x:Key="IconTemplate">
             <Button x:Name="IconButton" Click="OnIconButtonClick" ToolTip="{Binding ToolTipMessage}">
-                <Image x:Name="Icon" Width="16" Height="16" Source="/MyMoney;component/Dialogs/Icons/CheckMark.png" />
+                <ui:SymbolIcon x:Name="Icon" Symbol="Accept" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             </Button>
             <DataTemplate.Triggers>
                 <DataTrigger Binding="{Binding Path=IsDisconnected}" Value="true">
-                    <Setter Property="Source" TargetName="Icon" Value="/MyMoney;component/Dialogs/Icons/delete.png"/>
+                    <Setter Property="Symbol" TargetName="Icon" Value="DisconnectDrive"/>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding Path=IsNew}" Value="true">
-                    <Setter Property="Source" TargetName="Icon" Value="/MyMoney;component/Dialogs/Icons/QuestionMark.png"/>
+                    <Setter Property="Symbol" TargetName="Icon" Value="Help"/>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding Path=HasWarning}" Value="true">
-                    <Setter Property="Source" TargetName="Icon" Value="/MyMoney;component/Dialogs/Icons/Warning.png"/>
+                    <Setter Property="Symbol" TargetName="Icon" Value="Import"/>
                 </DataTrigger>
             </DataTemplate.Triggers>
         </DataTemplate>
