--- a/Source/WPF/MyMoney/Dialogs/MoneyFileImportDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/MoneyFileImportDialog.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Walkabout.Dialogs"
         xmlns:c="clr-namespace:Walkabout.WpfConverters"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
         mc:Ignorable="d"
         Title="Money File Import" Height="500" Width="800"
         >
@@ -35,8 +36,8 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
-                        <Image Source="Icons/CheckMark.png" Visibility="{Binding Done, Converter={StaticResource BoolToVisibilityConverter}}"/>
-                        <Image Source="/MyMoney;component/Icons/Filter.png" Visibility="{Binding Loading, Converter={StaticResource BoolToVisibilityConverter}}"/>
+                        <ui:SymbolIcon Symbol="Accept" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="{Binding Done, Converter={StaticResource BoolToVisibilityConverter}}"/>
+                        <ui:SymbolIcon Symbol="Filter" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="{Binding Loading, Converter={StaticResource BoolToVisibilityConverter}}"/>
                         <TextBlock Text="{Binding Name}" Grid.Column="1" Margin="5"/>
                         <TextBlock Text="{Binding Status}" Grid.Column="2" Margin="5"/>
                         <ProgressBar Grid.Row="1" Grid.Column="1" Height="4" Minimum="0" Maximum="100" Value="{Binding PercentComplete}"
