--- a/Source/WPF/MyMoney/Dialogs/PasswordWindow.xaml
+++ b/Source/WPF/MyMoney/Dialogs/PasswordWindow.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Walkabout.Dialogs"
-        xmlns:c="clr-namespace:Walkabout.Controls"
-        x:Name="PasswordDialog"
+        xmlns:c="clr-namespace:Walkabout.Controls" xmlns:ui="http://schemas.modernwpf.com/2019"
+                  x:Name="PasswordDialog"
         Title="Password" SizeToContent="WidthAndHeight"
         MaxWidth="460">
     <Window.Resources>
@@ -42,9 +42,11 @@
                 </RichTextBox.Document>
             </RichTextBox>
 
-            <Image x:Name="KeyImage" Source="Icons/Key.png" Margin="20,20,20,20" VerticalAlignment="Top" Grid.Row="1" Width="48" Height="48"/>
-            <Image x:Name="ShieldImage" Visibility="Hidden" Source="Icons/Shield.png" Margin="20,20,20,20" VerticalAlignment="Top" Grid.Row="1" Width="48" Height="48"/>
-            <Image x:Name="BrokenImage" Visibility="Hidden" Source="Icons/Broken.png" Margin="20,20,20,20" VerticalAlignment="Top" Grid.Row="1" Width="48" Height="48"/>
+            <Grid Grid.Row="1" VerticalAlignment="Center" Margin="20,0,20,0">
+                <ui:SymbolIcon x:Name="KeyImage" Symbol="Permissions"/>
+                <ui:SymbolIcon x:Name="ShieldImage" Symbol="Accept" Visibility="Hidden"/>
+                <ui:SymbolIcon x:Name="BrokenImage" Symbol="ReportHacked" Visibility="Hidden"/>
+            </Grid>
 
             <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" VerticalAlignment="Top">
 
