--- a/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Walkabout.Views.Controls"
-             xmlns:help="clr-namespace:Walkabout.Help"
+             xmlns:help="clr-namespace:Walkabout.Help" xmlns:ui="http://schemas.modernwpf.com/2019"
              help:HelpService.HelpKeyword="Bank Accounts"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
@@ -45,9 +45,7 @@
           <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
-        <Image Source="{Binding Path=WarningIcon}"
-                       Width="16" Height="16"
-                       Visibility="{Binding Path=WarningIconVisibility}"
+        <ui:SymbolIcon Symbol="Important" Visibility="{Binding Path=WarningIconVisibility}"
                        Margin="0,0,5,0" 
                        ToolTip="{Binding Path=WarningIconTooltip}"/>
 
