--- a/Source/WPF/MyMoney/Dialogs/OnlineAccountDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/OnlineAccountDialog.xaml
@@ -1,13 +1,13 @@
 ﻿<local:BaseDialog x:Class="Walkabout.Dialogs.OnlineAccountDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:ofx="clr-namespace:Walkabout.Ofx"
-        xmlns:data="clr-namespace:Walkabout.Data"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:local="clr-namespace:Walkabout.Dialogs"
-        xmlns:help="clr-namespace:Walkabout.Help"
         mc:Ignorable="d" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:local="clr-namespace:Walkabout.Dialogs"
+        xmlns:ofx="clr-namespace:Walkabout.Ofx"
+        xmlns:data="clr-namespace:Walkabout.Data"
+        xmlns:help="clr-namespace:Walkabout.Help"
         help:HelpService.HelpKeyword="Online Banking"
         xmlns:c="clr-namespace:Walkabout.WpfConverters" 
         xmlns:ui="http://schemas.modernwpf.com/2019"
@@ -15,34 +15,14 @@
         WindowStartupLocation="CenterOwner" 
         WindowStyle="ToolWindow"
         SizeToContent="WidthAndHeight" 
-        d:DesignHeight="520" d:DesignWidth="859">
+        MinWidth="700"
+        d:DesignHeight="600" d:DesignWidth="900">
 
     <Window.Resources>
-        <SolidColorBrush x:Key="TextBrush" Color="Black"/>
-
-        <SolidColorBrush x:Key="GridViewHeaderBrush" Color="#C9BDAF"/>
-
-        <Style TargetType="{x:Type ListView}">
-            <Setter Property="Background" Value="{DynamicResource ShadeBrush}" />
-            <Setter Property="BorderBrush" Value="{DynamicResource NormalBorderBrush}" />
-            <Setter Property="Foreground" Value="#FF042271" />
-        </Style>
-
-        <Style TargetType="{x:Type ListViewItem}">
-            <Setter Property="Foreground" Value="{DynamicResource TextBrush}"/>
-        </Style>
-
-        <Style x:Key="SimpleHeaderStyle" TargetType="{x:Type GridViewColumnHeader}">
-            <Setter Property="Background" Value="{StaticResource GridViewHeaderBrush}"/>
-        </Style>
 
         <DataTemplate DataType="{x:Type ofx:OfxInstitutionInfo}">
             <TextBlock Text="{Binding Path=Name}"/>
         </DataTemplate>
-
-        <Style TargetType="{x:Type TextBox}">
-            <Setter Property="MinWidth" Value="250"/>
-        </Style>
 
         <DataTemplate x:Key="IconTemplate">
             <Button x:Name="IconButton" Click="OnIconButtonClick" ToolTip="{Binding ToolTipMessage}">
@@ -143,7 +123,7 @@
             <ProgressBar x:Name="GetBankListProgress" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" IsIndeterminate="True"/>
 
             <TextBlock Text="Institution name:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" />
-            <TextBox x:Name="TextBoxInstitution" Text="{Binding Path=Institution}" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"   Height="22" TextChanged="OnTextChanged"/>
+            <TextBox x:Name="TextBoxInstitution" Text="{Binding Path=Institution}" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" TextChanged="OnTextChanged"/>
 
             <TextBlock Text="Institution ID (FID):" Grid.Column="0" Grid.Row="6" HorizontalAlignment="Right" />
             <TextBox x:Name="TextBoxFid" Text="{Binding Path=FID}" Grid.Column="2" Grid.Row="6" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" TextChanged="OnTextChanged" />
@@ -189,9 +169,9 @@
                 <ListView x:Name="OnlineResultList"  HorizontalAlignment="Stretch" >
                     <ListView.View>
                         <GridView >
-                            <GridViewColumn x:Name="ColumnIcon" Width="Auto" CellTemplate="{StaticResource IconTemplate}"  HeaderContainerStyle="{StaticResource SimpleHeaderStyle}"/>
-                            <GridViewColumn x:Name="ColumnId" DisplayMemberBinding="{Binding Path=AccountId}" Width="Auto" Header="Id" HeaderContainerStyle="{StaticResource SimpleHeaderStyle}"/>
-                            <GridViewColumn x:Name="ColumnName" DisplayMemberBinding="{Binding Path=Name}" Width="Auto" Header="Name" HeaderContainerStyle="{StaticResource SimpleHeaderStyle}"/>
+                            <GridViewColumn x:Name="ColumnIcon" Width="Auto" CellTemplate="{StaticResource IconTemplate}"/>
+                            <GridViewColumn x:Name="ColumnId" DisplayMemberBinding="{Binding Path=AccountId}" Width="Auto" Header="Id" />
+                            <GridViewColumn x:Name="ColumnName" DisplayMemberBinding="{Binding Path=Name}" Width="Auto" Header="Name" />
                         </GridView>
                     </ListView.View>
                 </ListView>
