--- a/Source/WPF/MyMoney/Dialogs/RentalDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/RentalDialog.xaml
@@ -1,7 +1,8 @@
 ﻿<dialog:BaseDialog x:Class="Walkabout.Dialogs.RentalDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        mc:Ignorable="d" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:dialog="clr-namespace:Walkabout.Dialogs"
         Title="Rental Property" 
@@ -46,7 +47,7 @@
             <TextBox Grid.Column="2" HorizontalAlignment="Stretch" Text="{Binding Path=Name, Mode=TwoWay}" Grid.ColumnSpan="2" />
 
             <TextBlock Text="Address:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" />
-            <TextBox Grid.Column="2" Grid.Row="2" HorizontalAlignment="Stretch"  Text="{Binding Path=Address, Mode=TwoWay}" Height="22" 
+            <TextBox Grid.Column="2" Grid.Row="2" HorizontalAlignment="Stretch"  Text="{Binding Path=Address, Mode=TwoWay}" 
                      Grid.ColumnSpan="2"/>
 
             <TextBlock Text="Description:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" />
