--- a/Source/WPF/MyMoney/Dialogs/OnlineAccountDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/OnlineAccountDialog.xaml
@@ -196,7 +196,7 @@
 
             <Button x:Name="ButtonVerify" Grid.Column="0" HorizontalAlignment="Right" IsDefault="True" MinWidth="72" MinHeight="23" Click="OnButtonVerify" ToolTip="Click here to verify this financial institution supports OFX downloading">_Connect...</Button>
 
-            <ProgressBar x:Name="Progress" IsIndeterminate="True"  Grid.Column="1" Height="20" HorizontalAlignment="Stretch" Margin="10,2,10,0" VerticalAlignment="Top" />
+            <ProgressBar x:Name="Progress" IsIndeterminate="True"  Grid.Column="1" HorizontalAlignment="Stretch"/>
 
             <Button x:Name="ButtonOk" Grid.Column="2" IsDefault="True" MinWidth="72" Margin="0,0,0,0" Click="OnButtonOk">OK</Button>
             <Button x:Name="ButtonCancel" Grid.Column="3" IsCancel="True" MinWidth="72" Margin="12,0,0,0" Click="OnButtonCancel">Cancel</Button>
