--- a/Source/WPF/MyMoney/Dialogs/CreateDatabaseDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/CreateDatabaseDialog.xaml
@@ -25,18 +25,22 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <TextBlock x:Name="LabelSqlitePrompt" Margin="0,10" Grid.ColumnSpan="4" TextWrapping="Wrap" Text="Please provide the full path of the database that you would like to create to store your money records:"/>
+                <TextBlock x:Name="LabelPrompt" Margin="0,10" Grid.ColumnSpan="4" TextWrapping="Wrap" 
+                           Text="Please provide the full path of the database that you would like to create to store your money records:"/>
 
                 <TextBlock Text="Filename:" Margin="5,2" Grid.Row="2" VerticalAlignment="Center"/>
-                <TextBox x:Name="TextBoxSqliteDatabaseFile"  Grid.Row="2" Grid.Column="1" Margin="2" TextChanged="TextBoxSqliteDatabaseFile_TextChanged" Grid.ColumnSpan="2"/>
-                <Button x:Name="ButtonSqliteBrowse" Click="ButtonSqliteBrowse_Click" Grid.Column="3"  Grid.Row="2" MinWidth="31">...</Button>
+                <TextBox x:Name="TextBoxFile"  Grid.Row="2" Grid.Column="1" Margin="2" TextChanged="TextBoxFile_TextChanged" Grid.ColumnSpan="2"/>
+                <Button x:Name="ButtonFileNameBrowse" Click="ButtonFileNameBrowse_Click" Grid.Column="3"  Grid.Row="2" MinWidth="31">...</Button>
 
-                <TextBlock Text="Password:" Margin="5,2" Grid.Row="3"  VerticalAlignment="Center"/>
-                <c:PasswordControl  x:Name="TextBoxSqlitePassword"  Grid.Row="3" Grid.Column="1" Margin="2" Grid.ColumnSpan="2"
+                <TextBlock x:Name="PromptPassword" Text="Password:" Margin="5,2" Grid.Row="3"  VerticalAlignment="Center"/>
+                <c:PasswordControl  x:Name="TextBoxPassword"  Grid.Row="3" Grid.Column="1" Margin="2" Grid.ColumnSpan="2"
                                             MinHeight="20"/>
 
+                <TextBlock Text="" Foreground="{DynamicResource ErrorMessageBrush}" x:Name="Status" TextWrapping="Wrap"
+                           Grid.Row="5" Grid.ColumnSpan="4" Margin="0,10"/>
             </Grid>
         </Grid>
 
