--- a/Source/WPF/MyMoney/Controls/AppSettings.xaml
+++ b/Source/WPF/MyMoney/Controls/AppSettings.xaml
@@ -49,7 +49,7 @@
         <TextBlock FontSize="18" Grid.Column="1" VerticalAlignment="Center" FontWeight="DemiBold" >Settings</TextBlock>
       </Grid>
 
-      <Label Grid.Row="1" Grid.Column="0">Database Password:</Label>
+      <Label x:Name="passwordPrompt" Grid.Row="1" Grid.Column="0">Database Password:</Label>
       <c:PasswordControl Grid.Row="1" Grid.Column="1" x:Name="editPasswordBox" PasswordChanged="OnPasswordChanged" Margin="5"/>
 
       <Label Grid.Row="2" Grid.Column="0"  VerticalAlignment="Center">Theme (Ctrl-L)</Label>
