Fix scenario test so it doesn't clobber the app Settings you use when not testing. Add small margin on progress bar in online account dialog.

--- a/Source/WPF/MyMoney/MainWindow.xaml
+++ b/Source/WPF/MyMoney/MainWindow.xaml
@@ -413,7 +413,7 @@
             <StatusBarItem HorizontalAlignment="Right">
                 <StackPanel Orientation="Vertical" >
                     <TextBlock x:Name="ProgressPrompt" Text=""/>
-                    <ProgressBar Width="200" x:Name="ProgressBar" Visibility="Hidden"/>
+                    <ProgressBar Width="200" x:Name="ProgressBar" Margin="0,0,10,0" />
                 </StackPanel>
             </StatusBarItem>
         </StatusBar>
